add db script
